<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F0FE">

    <!-- View do Retângulo Branco -->
    <View
        android:id="@+id/fundo_das_informacoes"
        android:layout_width="392dp"
        android:layout_height="315dp"
        android:background="@drawable/fundo_branco_perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />

    <!-- TextView do Título -->
    <TextView
        android:id="@+id/meu_perfil"
        android:layout_width="97dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:elevation="8dp"
        android:gravity="top"
        android:text="@string/meu_perfil"
        android:textAppearance="@style/meu_perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Botão de Edição -->

    <Button
        android:id="@+id/edicao_perfil"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/voltar_codigo"
        android:contentDescription="@string/descricao_edicao_perfil"
        android:drawableTop="@drawable/icon_edicao_perfil"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/voltar_impacto"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="336dp"
        android:background="@drawable/voltar_codigo"
        android:contentDescription="@string/voltar"
        android:drawableTop="@drawable/voltar"
        android:elevation="10dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- imagem perfil -->
    <View
        android:id="@+id/fundo_perfil"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="88dp"
        tools:ignore="MissingConstraints"
        android:background="@drawable/fundo_cinza_perfil"/>

    <ImageView
        android:id="@+id/foto_de_perfil"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="88dp"
        android:elevation="8dp"
        android:src="@drawable/foto_perfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- text view das informações-->
    <TextView
        android:id="@+id/nome"
        android:layout_width="25dp"
        android:layout_height="18dp"
        android:layout_alignParentTop="true"
        android:elevation="8dp"
        android:gravity="top"
        android:text="@string/nome_mostra"
        android:textAppearance="@style/informacoes"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="88dp" />

    <TextView
        android:id="@+id/igor_silva_"
        android:layout_width="132dp"
        android:layout_height="15dp"
        android:layout_alignParentTop="true"
        android:elevation="8dp"
        android:gravity="top"
        android:text="@string/email"
        android:textAppearance="@style/contato"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="197dp" />

    <TextView
        android:id="@+id/nome3"
        android:layout_width="27dp"
        android:layout_height="16dp"
        android:layout_alignParentTop="true"
        android:elevation="8dp"
        android:gravity="top"
        android:text="@string/email_mostra"
        android:textAppearance="@style/informacoes"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="181dp" />

    <TextView
        android:id="@+id/nome2"
        android:layout_width="76dp"
        android:layout_height="17dp"
        android:layout_alignParentTop="true"
        android:elevation="8dp"
        android:gravity="top"
        android:text="@string/contato_mostra"
        android:textAppearance="@style/informacoes"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="141dp" />

    <TextView
        android:id="@+id/igor_santos"
        android:layout_width="106dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:elevation="8dp"
        android:gravity="top"
        android:text="@string/nome_pessoa"
        android:textAppearance="@style/nome_pessoa"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="106dp" />

    <TextView
        android:id="@+id/telefone"
        android:layout_width="103dp"
        android:layout_height="15dp"
        android:layout_alignParentTop="true"
        android:elevation="8dp"
        android:gravity="top"
        android:text="@string/telefone"
        android:textAppearance="@style/contato"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="158dp" />

    <!-- os botões -->

    <!-- dados cadrastais -->
    <View
        android:id="@+id/fundo_botao_cadrasto"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/fundo_botao_azul_claro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dados_cadratais"
        style="@style/botoes_perfil"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/botao_transparente"
        android:text="@string/dados_cadrastais"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- meus endereços -->
    <View
        android:id="@+id/fundo_botao_endereco"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/fundo_botao_azul_claro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/meus_enderecos"
        style="@style/botoes_perfil"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="480dp"
        android:background="@drawable/botao_transparente"
        android:text="@string/meus_enderecos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- meu impacto -->
    <View
        android:id="@+id/fundo_botao_impacto"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginTop="552dp"
        android:background="@drawable/fundo_botao_azul_claro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/impacto_botao"
        style="@style/botoes_perfil"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="552dp"
        android:background="@drawable/botao_transparente"
        android:text="@string/impacto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- meu impacto -->

    <View
        android:id="@+id/fundo_botao_sair"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginTop="624dp"
        android:background="@drawable/fundo_botao_azul_claro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sair_botao"
        style="@style/botoes_perfil"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="624dp"
        android:background="@drawable/botao_transparente"
        android:text="@string/sair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
