<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F0FE">

    <!-- parte de cima -->
    <TextView
        android:id="@+id/idonor_volta_impacto"
        android:layout_width="76dp"
        android:layout_height="26dp"
        android:layout_marginTop="20dp"
        android:elevation="8dp"
        android:gravity="top"
        android:text="@string/app_name"
        android:textAppearance="@style/idonor_volta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/voltar_impacto"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="344dp"
        android:background="@drawable/voltar_codigo"
        android:contentDescription="@string/voltar"
        android:drawableTop="@drawable/voltar"
        android:elevation="10dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/impacto"
        android:layout_width="145dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/impacto"
        android:textAppearance="@style/impacto"
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="59dp"
        tools:ignore="MissingConstraints" />

    <!-- layout da semana do gráfico de impacto  -->

    <Button
        android:id="@+id/seta_semana_1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="252dp"
        android:background="@drawable/voltar_codigo"
        android:contentDescription="@string/voltar"
        android:drawableTop="@drawable/seta_semana_esquerda"
        android:elevation="10dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/seta_semana_direita"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="92dp"
        android:background="@drawable/voltar_codigo"
        android:contentDescription="@string/voltar"
        android:drawableTop="@drawable/seta_semana_direita"
        android:elevation="10dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/linha_divisoaria_1"
        android:layout_width="1dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/linha_semana"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="122dp" />

    <View
        android:id="@+id/inha_divisoaria_2"
        android:layout_width="1dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/linha_semana"
        tools:layout_editor_absoluteX="268dp"
        tools:layout_editor_absoluteY="122dp"
        tools:ignore="MissingConstraints" />

    <!-- layout da seleção semana mês e ano  -->

    <View
        android:id="@+id/semana_mes_ano"
        android:layout_width="364dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/semana_mes_ano"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="165dp" />

    <Button
        android:id="@+id/semana"
        style="@style/semana_mes_ano"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/botao_transparente"
        android:elevation="8dp"
        android:text="@string/semana"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mes"
        style="@style/semana_mes_ano"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/botao_transparente"
        android:elevation="8dp"
        android:text="@string/m_s"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ano"
        style="@style/semana_mes_ano"
        android:layout_width="101dp"
        android:layout_height="48dp"
        android:layout_marginStart="272dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/botao_transparente"
        android:elevation="8dp"
        android:text="@string/ano"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- layout do gráfico  -->

    <View
        android:id="@+id/fundo_grafico"
        android:layout_width="356dp"
        android:layout_height="183dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/fundo_grafico"
        android:elevation="4dp"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="244dp"
        tools:ignore="MissingConstraints" />

    <!-- retângulo de dados  -->

    <ImageView
        android:id="@+id/fundo_quantidade_itens"
        android:layout_width="170dp"
        android:layout_height="69dp"
        android:background="@android:color/transparent"
        android:src="@drawable/retangulo_azul_claro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636" />

    <TextView
        android:id="@+id/itens_doado"
        android:layout_width="134dp"
        android:layout_height="11dp"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/total_de_itens_doados"
        android:textAppearance="@style/titulo_dados"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="490dp" />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="69dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/xx"
        android:textAppearance="@style/num_dados"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="501dp" />

    <ImageView
        android:id="@+id/fundo_maior_dia"
        android:layout_width="170dp"
        android:layout_height="69dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/retangulo_azul_claro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <TextView
        android:id="@+id/maior_doacao"
        android:layout_width="134dp"
        android:layout_height="11dp"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/maior_dia_de_doa_o"
        android:textAppearance="@style/titulo_dados"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="490dp" />

    <TextView
        android:id="@+id/dia_maior_doacao"
        android:layout_width="69dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/xx"
        android:textAppearance="@style/num_dados"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="260dp"
        tools:layout_editor_absoluteY="501dp" />

    <!-- comentários -->

    <View
        android:id="@+id/fundo_comentarios"
        android:layout_width="350dp"
        android:layout_height="155dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/fundo_comentarios"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="589dp" />

    <TextView
        android:id="@+id/titulo_comentarios"
        android:layout_width="126dp"
        android:layout_height="15dp"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/titulo_comentarios"
        android:textAppearance="@style/titulo_comentarios"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="598dp" />

</androidx.constraintlayout.widget.ConstraintLayout>