<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="600dp"
    tools:context=".fragmentAvaliacao">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botaoinfoavaliacao"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/fundo_transparente_botao"
        android:contentDescription="Botão de Info"
        android:drawableLeft="@drawable/iconinformacao"
        android:paddingLeft="12dp"
        android:paddingBottom="14dp"
        />

    <View
        android:id="@+id/line_18"
        android:layout_width="65dp"
        android:layout_height="2dp"
        android:layout_marginStart="298dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/linha_azul"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botaowishlistavaliacao"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="119dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/fundo_transparente_botao"
        android:contentDescription="Botão WishList"
        android:drawableLeft="@drawable/list"
        android:paddingLeft="19dp"
        android:paddingBottom="12dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botaocontatoavaliacao"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="215dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/fundo_transparente_botao"
        android:contentDescription="Botão Contato"
        android:drawableLeft="@drawable/iconcontato"
        android:paddingLeft="14dp"
        android:paddingBottom="9dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botaoavaliacaoavaliacao"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="298dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/fundo_transparente_botao"
        android:contentDescription="Botão Avaliação"
        android:drawableLeft="@drawable/star_azul"
        android:paddingLeft="17dp"
        android:paddingBottom="12dp"
        />

    <ImageView
        android:id="@+id/backgroundtextosinfo"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/informacoes"
        android:scaleType="fitXY"
        />


    <ImageView
        android:id="@+id/foto_de_perfil"
        android:layout_width="56dp"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/foto_perfil"
        />

    <TextView
        android:layout_width="106dp"
        android:layout_height="32dp"
        android:layout_marginTop="105dp"
        android:layout_marginStart="95dp"
        android:fontFamily="@font/sairaextracondensedsemibold"
        android:text="Carlos Silva"
        android:textSize="20sp"
        />

    <ImageView
        android:layout_width="47dp"
        android:layout_height="30dp"
        android:layout_marginTop="105dp"
        android:layout_marginStart="175dp"
        android:contentDescription="@string/descricao_estrelas_lar"
        android:src="@drawable/estrelas_lar"
        />

    <TextView
        android:layout_width="325dp"
        android:layout_height="53dp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/sairaextracondensedsemibold"
        android:text="Muito boa a Instituição, fiz várias doações e tenho a sensação que realmente os ajudo."
        android:textSize="15sp"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="210dp"
        android:contentDescription="@string/foto_de_perfil_do_primeiro_coment_rio"
        android:src="@drawable/comentario_2"
        />

    <TextView

        android:layout_width="108dp"
        android:layout_height="32dp"
        android:layout_marginTop="220dp"
        android:layout_marginStart="95dp"
        android:fontFamily="@font/sairaextracondensedsemibold"
        android:text="Manu Gomes"
        android:textSize="20sp"
        />

    <ImageView
        android:layout_width="47dp"
        android:layout_height="14dp"
        android:layout_marginTop="229dp"
        android:layout_marginStart="180dp"
        android:contentDescription="@string/descricao_estrelas_sandra"
        android:src="@drawable/estrelas_sandra"
        />

    <TextView
        android:layout_width="325dp"
        android:layout_height="53dp"
        android:layout_marginTop="265dp"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/sairaextracondensedsemibold"
        android:text="Já fui alguma vezes como voluntária e gostei muito do dia que tive lá.\n São muito atenciosos."
        android:textSize="15sp"
        />

</FrameLayout>